[Fix kbss-cvut/termit-ui#753] Requested improvements and missing docs