@@ -203,7 +203,7 @@ public class TermDaoSnapshotsTest extends BaseTermDaoTestRunner {
         enableRdfsInference(em);
         final Term term = generateTermWithSnapshot();
 
-        final List<TermDto> result = sut.findAllRootsInVocabularies(Collections.singletonList(vocabulary.getUri()), Constants.DEFAULT_PAGE_SPEC,
+        final List<TermDto> result = sut.findAllRootsInVocabularies(List.of(vocabulary.getUri()), Constants.DEFAULT_PAGE_SPEC,
                 Collections.emptySet());
         assertEquals(Collections.singletonList(new TermDto(term)), result);
     }
